--- a/styles/text.css
+++ b/styles/text.css
@@ -19,4 +19,18 @@ td{
 ul{
 	margin : 30px;
 }
-
+img
+{
+	width :300px;
+	height :200px;
+	border-radius : 10px;
+}
+button
+{
+	background-color :#1f1f1fff;
+	border : none;
+}
+button:hover
+{
+	background-color :#0f0f0fff;
+}
