--- a/styles/div.css
+++ b/styles/div.css
@@ -2,6 +2,8 @@
 	float : right;
 }
 .el_3{
+	background-color:#2f2f2fff;
+	border: solid 10px #2f2f2fff;
 	margin: 30px;
 	display : grid;
 	grid-template-columns: 33% 33% 33%;
